--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <meta name="theme-color" content="#12A7B5">
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="content/css/main.min.css">
+    <link rel="stylesheet" href="/content/css/main.min.css">
     <!-- endinject -->
 
     <!-- inject:js -->
-    <script src="app/js/plugins.min.js"></script>
-    <script src="app/js/scripts.min.js"></script>
+    <script src="/app/js/plugins.min.js"></script>
+    <script src="/app/js/scripts.min.js"></script>
     <!-- endinject -->
 
 
