--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <meta name="msapplication-TileImage" content="content/img/favicon.png">
     <meta name="msapplication-TileColor" content="#12A7B5">
     <meta name="theme-color" content="#12A7B5">
+    <link rel="manifest" href="/manifest.json">
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="content/css/main.min.css">
+    <link rel="stylesheet" href="/content/css/main.min.css">
     <!-- endinject -->
 
     <!-- inject:js -->
-    <script src="app/js/plugins.min.js"></script>
-    <script src="app/js/scripts.min.js"></script>
+    <script src="/app/js/plugins.min.js"></script>
+    <script src="/app/js/scripts.min.js"></script>
     <!-- endinject -->
 
 
@@ -26,5 +27,15 @@
 <body >
     <div ui-view></div>
 </body>
-
+<script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/sw.js')
+        .then(function () {
+          console.log('service worker registered');
+        })
+        .catch(function () {
+          console.warn('service worker failed');
+        });
+    }
+  </script>
 </html>
