--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <meta name="msapplication-TileImage" content="content/img/favicon.png">
     <meta name="msapplication-TileColor" content="#12A7B5">
     <meta name="theme-color" content="#12A7B5">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
 
     <!-- inject:css -->
-    <link rel="stylesheet" href="/content/css/main.min.css">
+    <link rel="stylesheet" href="content/css/main.min.css">
     <!-- endinject -->
 
     <!-- inject:js -->
-    <script src="/app/js/plugins.min.js"></script>
-    <script src="/app/js/scripts.min.js"></script>
+    <script src="app/js/plugins.min.js"></script>
+    <script src="app/js/scripts.min.js"></script>
     <!-- endinject -->
 
 
