--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
 </body>
 <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
+      navigator.serviceWorker.register('sw.js')
         .then(function () {
           console.log('service worker registered');
         })
