--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="amApp" notication-donativo>
+<html lang="pt-br" ng-app="amApp" notication-donativo>
 
 <head>
     <title update-title>{{pageTitle}}</title>
